# using-skills

./: .gitignore  CLAUDE.md  README.md
skills/ai-planning-workflow/: SKILL.md
skills/chrome-ext-expert/: SKILL.md
skills/cmux-browser/: SKILL.md
skills/cmux-browser-workspace/iteration-1/: benchmark.json  benchmark.md
skills/cmux-browser/evals/: evals.json
skills/design-taste-frontend/: SKILL.md
skills/drawio/: SKILL.md
skills/fastapi-templates/: SKILL.md
skills/follow-builders/: SKILL.md  feed-blogs.json  feed-x.json  state-feed.json
skills/follow-builders/scripts/: deliver.js  save-to-obsidian.js
skills/git-bug-hunter/: SKILL.md
skills/md2epub/: SKILL.md  pyproject.toml  requirements.txt
skills/md2epub/scripts/: find_ireader.py
skills/md2epub/src/: __init__.py  __main__.py  converter.py  email_sender.py  epub_builder.py  image_handler.py  markdown_parser.py
skills/md2epub/templates/: style.css
skills/md2kindle/: SKILL.md
skills/md2kindle/scripts/: check_calibre.py
skills/md2kindle/src/: __init__.py  __main__.py  converter.py
skills/md2pdf/: SKILL.md
skills/md2pdf/evals/: evals.json
skills/miles_work/: SKILL.md
skills/pyside6-architecture/: SKILL.md
skills/skill-creator/: SKILL.md
skills/skill-creator/references/: blind-comparison.md  description-optimization.md  platform-specific.md
skills/skill-optimizer/: SKILL.md
skills/skill-optimizer/references/: checklist.md
skills/socratic-questioning/: SKILL.md
skills/solar-storage-diagram/: SKILL.md
skills/tauri-architecture/: SKILL.md
(+25 files in other folders)
